force-app/main/default/objects/Contact/fields/Application_Link__c.field-meta.xml
<CustomField>
    <fullName>Application_Link__c</fullName>
    <formula>IF(ISBLANK(Application_ID__c) , FirstName +  LastName , &quot;False&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Link</label>
    <type>Text</type>
</CustomField>