force-app/main/default/objects/Contact/fields/Burst_SMS_Email__c.field-meta.xml
<CustomField>
    <fullName>Burst_SMS_Email__c</fullName>
    <formula>Mobile_Phone_Burst_SMS_Format__c+&quot;@transmitsms.com&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Burst SMS Email</label>
    <type>Text</type>
</CustomField>