force-app/main/default/objects/Contact/fields/Current_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Current_Affiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Affiliation</label>
    <referenceTo>npe5__Affiliation__c</referenceTo>
    <relationshipLabel>Current Affiliation</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>