force-app/main/default/objects/Contact/fields/Current_Role_Def__c.field-meta.xml
<CustomField>
    <fullName>Current_Role_Def__c</fullName>
    <formula>TEXT(Current_Affiliation__r.Role__c) + &quot; at &quot; +  Current_Affiliation__r.npe5__Organization__r.Name + &quot; from &quot; + TEXT(Current_Affiliation__r.npe5__StartDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Role Def</label>
    <type>Text</type>
</CustomField>