force-app/main/default/objects/Contact/fields/FLP_Alumni__c.field-meta.xml
<CustomField>
    <fullName>FLP_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FLP Alumni</label>
    <type>Checkbox</type>
</CustomField>