force-app/main/default/objects/Contact/fields/RM_Booking_Link__c.field-meta.xml
<CustomField>
    <fullName>RM_Booking_Link__c</fullName>
    <description>URL to the Booking portal for the assigned RM overseeing this applicant. Updated by a flow when the Application owner is updated.</description>
    <label>RM Booking Link</label>
    <type>Url</type>
</CustomField>