force-app/main/default/objects/Contact/fields/RM_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>RM_Email_Address__c</fullName>
    <description>Email address of the assigned Recruitment Manager. Used for email template merge fields during application nurturing.</description>
    <label>RM Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>