force-app/main/default/objects/Contact/fields/RM_Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>RM_Email_Signature__c</fullName>
    <description>The email signature to use for email communications from the RM to the applicant. Updated by a flow when an Application related to the Contact has it&apos;s Owner modified.</description>
    <label>RM Email Signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>