force-app/main/default/objects/Contact/fields/RM_First_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_First_Name__c</fullName>
    <description>First name of the assigned Recruitment Manager. Used for email merge fields during application nurturing.</description>
    <label>RM First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>