force-app/main/default/objects/Contact/fields/Stakeholder_Communications__c.field-meta.xml
<CustomField>
    <fullName>Stakeholder_Communications__c</fullName>
    <inlineHelpText>To identify the stakeholders TFA has communicated with as part of the for approved program adjustment.</inlineHelpText>
    <label>Stakeholder Communications</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>State or Territory Education Department</fullName>
            </value>
            <value>
                <fullName>TRB</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>