force-app/main/default/objects/Contact/fields/TTL_Alumni__c.field-meta.xml
<CustomField>
    <fullName>TTL_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TTL Alumni</label>
    <type>Checkbox</type>
</CustomField>