force-app/main/default/objects/Contact/fields/UG_Alumni__c.field-meta.xml
<CustomField>
    <fullName>UG_Alumni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UG Alumni</label>
    <type>Checkbox</type>
</CustomField>